# A-Smart-System-for-Personalized-Interior-Design-AR-Try-On

./: .gitignore  Capstone Project PPT.pptx  PPT.pptx  README.md
Capstone/: ar_tryon.html  furniture_detection.py  interior.ipynb  m.py  yolo.yaml
Capstone/furniture_detection/yolov8_furniture/: args.yaml  results.csv
Capstone/furniture_yolo_dataset/: furniture.yaml  yolo.yaml  yolov8n.pt
Capstone/furniture_yolo_dataset/labels/: test.cache  train.cache  val.cache
Capstone/indoor_detection/yolo_indoor/: args.yaml
Capstone/prediction_yolo8vl/: image_1.txt  image_1024.txt  image_1031.txt  image_1032.txt  image_1046.txt  image_105.txt  image_1056.txt  image_107.txt  image_1073.txt  image_1074.txt  image_1089.txt  image_1094.txt  image_1097.txt  image_1140.txt  image_1148.txt  image_1166.txt  image_1167.txt  image_1187.txt  image_1198.txt  image_1215.txt  image_1218.txt  image_1231.txt  image_1249.txt  image_1260.txt  image_1266.txt  image_1271.txt  image_1272.txt  image_1273.txt  image_1280.txt  image_1283.txt  image_1291.txt  image_130.txt  image_1313.txt  image_1338.txt  image_1355.txt  image_1356.txt  image_1363.txt  image_1365.txt  image_1366.txt  image_1368.txt  (+226 more)
Capstone/test_evaluation/: evaluation_summary.json
Interior Design/: .env  TECHNICAL_DOCUMENTATION.md
Interior Design/backend/: .env  database.py  interior_designer.db  main.py  pyproject.toml
Interior Design/backend/routers/: auth.py  designs.py  tryon.py
Interior Design/backend/utils/: analysis.py
Interior Design/frontend/: index.html  package-lock.json  package.json
(+2176 files in other folders)
